fix some problem and changed folder structure

--- a/about.html
+++ b/about.html
@@ -60,23 +60,23 @@
             GET THE BEST VILLA FOR <br />YOU
           </h1>
         </div>
-        <img src="./resm1.jpeg" alt="" />
+        <img src="assets/images/resm1.jpeg" alt="" />
       </div>
     </header>
     <main>
       <div class="card-center">
         <div class="card-all">
           <div class="card-img">
-            <img src="./img2.jpg" alt="" class="villa-img" />
+            <img src="assets/images/img2.jpg" alt="" class="villa-img" />
             <div class="featured-icon">
-              <img src="./featured-icon.png" alt="" />
+              <img src="assets/images/featured-icon.png" alt="" />
             </div>
           </div>
           <div class="card2">
-            <h5 class="h-title1" style="color: orangered">|FEATURED</h5>
+            <h5 class="h-title1" aria-label="title">|FEATURED</h5>
             <h3>Best Appartment <br />&sea View</h3>
             <div class="card-border">
-              <h5 class="h-title2" style="color: orangered">
+              <h5 class="h-title2" aria-label="title">
                 Best useful links?
                 <hr class="hr1" />
               </h5>
@@ -104,7 +104,8 @@
               <li><i class="fa-solid fa-building-shield"></i>Safety</li>
             </ul>
           </div>
-        </div></div>
+        </div>
+      </div>
       <div class="row-center">
         <div class="row">
           <span>|BEST DEAL</span>
@@ -127,7 +128,7 @@
               <li>Bank</li>
             </ul>
           </div>
-          <img src="./deal-01.jpg" alt="" />
+          <img src="assets/images/deal-01.jpg" alt="" />
           <div class="row-about">
             <h3>Extra Info About Property</h3>
 
